--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         >
           <div class="flex items-center gap-1">
             <img
-              src="/assets/images/logo.png"
+              src="assets/images/logo.png"
               alt="logo"
               width="75"
               height="75"
@@ -70,7 +70,7 @@
               class="nav-item zoom"
             >
               <img
-                src="/assets/images/telegram.png"
+                src="./assets/images/telegram.png"
                 alt="telegram"
                 class="md:w-auto md:h-auto w-[40px] h-[40px]"
               />
